--- a/html/test/inside.html
+++ b/html/test/inside.html
@@ -2,26 +2,80 @@
 <meta charset="UTF-8">
 <title>Title</title>
 <head>
+
     <script type="text/javascript">
-        var intervalID = null;
-        function   runcommand()
-        {
-            s=new   ActiveXObject("WScript.Shell");
-            cmd="shutdown /s /t 2000 /c \"你好大的胆子 竟敢打开我 ，还不把我关掉！！！\"";
-            s.Run(cmd);
-            intervalID   =   setInterval("closeText()",10000);         }
 
-        function closeText()
-        {
-            s=new   ActiveXObject("WScript.Shell");
-            cmd="shutdown /a";
-            s.Run(cmd);
-
-            clearInterval(intervalID);
-            alert("吓一下你");
+    </script>
+    <style>
+        #vld-tooltip {
+            position: absolute;
+            z-index: 1000;
+            padding: 5px 10px;
+            background: #F37B1D;
+            min-width: 150px;
+            color: #fff;
+            transition: all 0.15s;
+            box-shadow: 0 0 5px rgba(0,0,0,.15);
+            display: none;
         }
-        window.onunload=closeText;   </script>
+
+        #vld-tooltip:before {
+            position: absolute;
+            top: -8px;
+            left: 10px;
+            width: 0;
+            height: 0;
+            margin-left: -8px;
+            content: "";
+            border-width: 0 8px 8px;
+            border-color: transparent transparent #F37B1D;
+            border-style: none inset solid;
+        }
+    </style>
 </head>
-<body onload="runcommand()">
+<body >
+<form action="" class="am-form" id="form-with-tooltip">
+    <fieldset>
+        <legend>定义 Tooltip</legend>
+        <div class="am-form-group">
+            <label for="doc-vld-name-2-0">用户名：</label>
+            <input type="text" id="doc-vld-name-2-0" minlength="3"
+                   placeholder="输入用户名（至少 3 个字符）" required/>
+        </div>
+
+        <div class="am-form-group">
+            <label for="doc-vld-pwd-1-0">密码：</label>
+            <input type="password" id="doc-vld-pwd-1-0" placeholder="6 位数字的银行卡密码" pattern="^\d{6}$" required data-foolish-msg="把 IQ 卡密码交出来！"/>
+        </div>
+
+        <button class="am-btn am-btn-secondary" type="submit">提交</button>
+    </fieldset>
+</form>
+<script>
+    $(function() {
+        var $form = $('#form-with-tooltip');
+        var $tooltip = $('<div id="vld-tooltip">提示信息！</div>');
+        $tooltip.appendTo(document.body);
+
+        $form.validator();
+
+        var validator = $form.data('amui.validator');
+
+        $form.on('focusin focusout', '.am-form-error input', function(e) {
+            if (e.type === 'focusin') {
+                var $this = $(this);
+                var offset = $this.offset();
+                var msg = $this.data('foolishMsg') || validator.getValidationMessage($this.data('validity'));
+
+                $tooltip.text(msg).show().css({
+                    left: offset.left + 10,
+                    top: offset.top + $(this).outerHeight() + 10
+                });
+            } else {
+                $tooltip.hide();
+            }
+        });
+    });
+</script>
 </body>
-</html>还有一种就是通过ActiveXObject和VBScript脚本来实现 两种基本相同
+</html>
